# fastapi_prod_level

./: Dockerfile  compose-dev.yaml  compose-prod.yaml  compose.debug.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 22b562bad7c4_create_posts_table.py  42b17b989767_auto_vote.py  7dc18f4b521b_.py  b413911f8c8f_user_table.py
app/: app.py  calculations.py  config.py  database.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_calc.py  test_posts.py  test_users.py  test_votes.py
